// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MinimalModal /> > should match snapshot with body 1`] = `
<body
  class="vars_OD_Base__1f5yyro0"
  style="overflow: hidden;"
>
  <div>
    <div
      class="vars_OD_Base__1f5yyro0"
    />
  </div>
  <div
    class="vars_OD_Base__1f5yyro0"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="true"
        class="reset_block__1oah0223 useBoxStyles_position_fixed__3xgq1lfz useBoxStyles_backgroundColours_neutral__3xgq1lfi Modal_backdrop_root__1psykzh3 Modal_transition__1psykzh1"
      />
      <div
        class="reset_block__1oah0223 useBoxStyles_position_fixed__3xgq1lfz useBoxStyles_overflow_hidden__3xgq1lg4 Modal_root__1psykzh0 Modal_transition__1psykzh1"
        role="presentation"
      >
        <div
          aria-hidden="false"
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw MinimalModal_container__13ik47w0"
          role="none presentation"
        >
          <article
            aria-labelledby="od-4"
            aria-modal="true"
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf"
            role="dialog"
          >
            <main
              class="useBoxStyles_display_flex__3xgq1lga useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf useBoxStyles_flexGrow_1__3xgq1lho MinimalModal_content__13ik47w1"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis neque a laoreet maximus. Vestibulum hendrerit quam at mi venenatis faucibus at vel nisi. In ut risus et ipsum tincidunt tempor. Suspendisse potenti. Praesent faucibus posuere risus, at congue mauris porttitor ut. Donec sit amet elit vitae purus dictum aliquet quis ut ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dui sapien, porttitor ac erat vel, malesuada rutrum mauris. Nam arcu tellus, pretium ut aliquet eget, ultrices vel est. Maecenas dapibus volutpat eros a volutpat.
              </p>
            </main>
          </article>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<MinimalModal /> > should match snapshot without title and body 1`] = `
<body
  class="vars_OD_Base__1f5yyro0"
  style="overflow: hidden;"
>
  <div>
    <div
      class="vars_OD_Base__1f5yyro0"
    />
  </div>
  <div
    class="vars_OD_Base__1f5yyro0"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="true"
        class="reset_block__1oah0223 useBoxStyles_position_fixed__3xgq1lfz useBoxStyles_backgroundColours_neutral__3xgq1lfi Modal_backdrop_root__1psykzh3 Modal_transition__1psykzh1"
      />
      <div
        class="reset_block__1oah0223 useBoxStyles_position_fixed__3xgq1lfz useBoxStyles_overflow_hidden__3xgq1lg4 Modal_root__1psykzh0 Modal_transition__1psykzh1"
        role="presentation"
      >
        <div
          aria-hidden="false"
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw MinimalModal_container__13ik47w0"
          role="none presentation"
        >
          <article
            aria-labelledby="od-3"
            aria-modal="true"
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf"
            role="dialog"
          >
            <main
              class="useBoxStyles_display_flex__3xgq1lga useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf useBoxStyles_flexGrow_1__3xgq1lho MinimalModal_content__13ik47w1"
            />
          </article>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
